fixes image height not expanding on small screens

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,6 +1,5 @@
 .Project {
   width: 100%;
-  height: 600px;
   border-color: #bbb;
   border-width: 1px;
   border-style: solid;
@@ -10,13 +9,25 @@
 }
 
 .Project-background {
-  height: 600px;
+  height: 100%;
   filter: blur(3px);
   grid-column-start: 1;
   grid-column-end: 4;
   grid-row-start: 1;
   grid-row-end: 4;
   overflow: hidden;
+}
+
+@media only screen and (min-width: 768px) {
+  .Project-image {
+    height: 600px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .Project-image {
+    height: 1000px;
+  }
 }
 
 .Project-body {
